
---
** New translation of the Emacs Tutorial in Hebrew is available
Type `C-u C-h t' to choose it in case your language setup doesn't
automatically select it.


* Startup Changes in Emacs 24.1

** The --unibyte, --multibyte, --no-multibyte, and --no-unibyte
command line arguments no longer have any effect.  (They were declared
obsolete in Emacs 23.)


* Changes in Emacs 24.1

** New emacsclient argument --parent-id ID can be used to open a
client frame in parent X window ID, via XEmbed.  This works like the
--parent-id argument to Emacs.

** Completion can cycle, depending on completion-cycle-threshold.

** auto-mode-case-fold is now enabled by default.

+++
** Emacs now supports display and editing of bidirectional text.

See the node "Bidirectional Editing" in the Emacs Manual for some
initial documentation.

To turn this on in any given buffer, set the buffer-local variable
`bidi-display-reordering' to a non-nil value.  The default is nil.

The buffer-local variable `bidi-paragraph-direction', if non-nil,
forces each paragraph in the buffer to have its base direction
according to the value of this variable.  Possible values are
`right-to-left' and `left-to-right'.  If the value is nil (the
default), Emacs determines the base direction of each paragraph from
its text, as specified by the Unicode Bidirectional Algorithm.

The function `current-bidi-paragraph-direction' returns the actual
value of paragraph base direction at point.

Reordering of bidirectional text for display in Emacs is a "Full
bidirectionality" class implementation of the Unicode Bidirectional
Algorithm.

Note that some advanced display features, such as overlay strings and
`display' text properties, do not yet work correctly when
bidirectional text is reordered for display.

** GTK scroll-bars are now placed on the right by default.
Use `set-scroll-bar-mode' to change this.

** GTK tool bars can have just text, just images or images and text.